# CudaBoost

./: .gitignore  CMakeLists.txt  README.md
include/: dataset.hpp
python/: demo.py  gbm_pybind.pyi  test.py
src/: dataset.cpp  decision_tree.cpp  gbm.cpp  main.cpp  py_wrapper.cpp  reg_tree.cpp  regressor.cpp
src/include/: decision_tree.hpp  reg_tree.hpp  regressor.hpp
src/regression/: reg_tree.cpp
tests/: dataset_test.cpp
